--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.3.0",
   "description": "Redact JS objects",
   "main": "index.js",
+  "types": "index.d.ts",
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
   "scripts": {
-    "test": "node --test",
+    "test": "node --test && npm run test:types",
     "test:integration": "node --test test/integration.test.js",
+    "test:types": "tsc --noEmit",
     "test:all": "node --test test/*.test.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -28,6 +34,8 @@
     "eslint": "^9.36.0",
     "fast-redact": "^3.5.0",
     "mitata": "^1.0.34",
-    "neostandard": "^0.12.2"
-  }
+    "neostandard": "^0.12.2",
+    "typescript": "^5.9.2"
+  },
+  "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a"
 }
